--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,9 @@ base64 = "0.22"
 argon2 = { version = "0.5", features = ["std"] }
 urlencoding = "2"
 htmlescape = "0.3"
+sha2 = "0.10"
+hmac = { version = "0.12", features = ["std"] }
+hex = "0.4"
 
 [dependencies.sqlx]
 version = "0.7"
