--- a/configuration/base.toml
+++ b/configuration/base.toml
@@ -2,6 +2,7 @@
 port = 8001
 host = "127.0.0.1"
 base_url = "http://127.0.0.1"
+hmac_secret = "my-super-long-and-secret-random-key-needed-to-verify-message-integrity"
 
 [database]
 host = "127.0.0.1"
